List the keyboard shortcuts from other parts of the help.

--- a/prince/helpfiles/locale/en-us/cd07-00-shortcuts.xhtml
+++ b/prince/helpfiles/locale/en-us/cd07-00-shortcuts.xhtml
@@ -30,26 +30,63 @@
 </preamble>
 </head> 
 <body> 
-<bodyText> <br/></bodyText><chapter xmlns="http://www.w3.org/1999/xhtml" id="tsid_3141598">
+<chapter xmlns="http://www.w3.org/1999/xhtml" id="tsid_3141598">
 <sectiontitle>Shortcut Reference</sectiontitle> 
-<bodyText>A complete list
-of all the shortcuts documented in the book is included here. </bodyText>
+<bodyText>A list of the shortcuts is included here. </bodyText>
 <section id="tsid_3141639">
-<sectiontitle><shortTitle>Document Creation</shortTitle>Document Creation
-Shortcuts</sectiontitle> <vspace dim="\fill " type="customSpace"/></section>
+<sectiontitle><shortTitle>Document Creation</shortTitle>Document Creation Shortcuts</sectiontitle> 
+  <bodyText><table cellspacing="2" cellpadding="2" border="1" style="width: 313px; height: 327px;" id="tsid_3141959"><tbody>
+    <tr><td valign="top"><bold>Command</bold><br type="_moz"/></td><td valign="top"><bold>Shortcut</bold><br type="_moz"/></td></tr>
+    <tr><td valign="top">Save<br type="_moz"/></td><td valign="top">Ctrl+s or Alt f s or <object width="29" height="26" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 34.5372px; width: 38.5222px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141880" sidemargin="0" topmargin="0" border-width="0" data="graphics/btnSave.jpg"/><br type="_moz"/></td></tr>
+    <tr><td valign="top">New Document<br type="_moz"/></td><td valign="top">Ctrl+n or Alt f n or <object width="23" height="24" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 31.8805px; width: 30.5521px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141881" sidemargin="0" topmargin="0" border-width="0" data="graphics/btnNew.jpg"/><br type="_moz"/></td></tr>
+    <tr><td valign="top">Open Document <br type="_moz"/></td><td valign="top">Ctrl+o or Alt f o or <object width="27" height="25" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 33.2088px; width: 35.8655px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141882" sidemargin="0" topmargin="0" border-width="0" data="graphics/btnOpen.jpg"/><br type="_moz"/></td></tr><tr><td valign="top">Quit program<br type="_moz"/></td><td valign="top">Ctrl+q or Alt f q<br type="_moz"/></td></tr><tr><td valign="top">Close Document<br type="_moz"/></td><td valign="top">Alt f c <br type="_moz"/></td></tr><tr><td valign="top">Save As<br type="_moz"/></td><td valign="top">Alt f a<br type="_moz"/></td></tr><tr><td valign="top">Revert<br type="_moz"/></td><td valign="top">Alt f v <br type="_moz"/></td></tr>
+    </tbody></table><br type="_moz"/>
+          </bodyText>
+        <msibr/>
+</section>
+
 <section id="tsid_3141640">
-<sectiontitle><shortTitle>Document Editing</shortTitle>Document Editing
-Shortcuts</sectiontitle> </section>
+<sectiontitle><shortTitle>Document Editing</shortTitle>Document Editing Shortcuts</sectiontitle> 
+    <bodyText> 
+      <table cellspacing="2" cellpadding="2" border="1" style="width: 253px; height: 271px;" id="tsid_3141961" req="tabulary"><tbody>
+        <tr><td valign="top"><bold>Command</bold><br type="_moz"/></td><td valign="top"><bold>Shortcut</bold><br type="_moz"/></td></tr>
+        <tr><td valign="top">Undo<br type="_moz"/></td><td valign="top">Ctrl+z or Alt e u<br type="_moz"/></td></tr>
+        <tr><td valign="top">Redo<br type="_moz"/></td><td valign="top">Ctrl+y or Alt e r<br type="_moz"/></td></tr>
+        <tr><td valign="top">Select All<br type="_moz"/></td><td valign="top">Ctrl+a or Alt e a<br type="_moz"/></td></tr><tr><td valign="top">Cut<br type="_moz"/></td><td valign="top">Ctrl+x or Alt e t<br type="_moz"/></td></tr><tr><td valign="top">Copy<br type="_moz"/></td><td valign="top">Ctrl+c or Alt e c<br type="_moz"/></td></tr><tr><td valign="top">Paste<br type="_moz"/></td><td valign="top">Ctrl+v or Alt e p<br type="_moz"/></td></tr><tr><td valign="top">Bold text<br type="_moz"/></td><td valign="top" msiSelectionManagerID="11"><object width="25" height="25" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 33.2088px; width: 33.2088px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141897" sidemargin="0" topmargin="0" border-width="0" data="graphics/btnBold.jpg"/><br type="_moz"/></td></tr><tr><td valign="top">Italic text<br type="_moz"/></td><td valign="top" msiSelectionManagerID="12"><object width="28" height="26" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 34.5372px; width: 37.1939px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141898" sidemargin="0" topmargin="0" border-width="0" data="graphics/btnItalic.jpg"/><br type="_moz"/></td></tr></tbody></table><br type="_moz"/>
+    </bodyText>
+    <msibr/>
+</section>
+
 <section id="tsid_3141641">
 <sectiontitle><shortTitle>Math Editing</shortTitle>Math Editing Shortcuts</sectiontitle>
+    <bodyText><table cellspacing="2" cellpadding="2" border="1" style="width: 310px; height: 164px;" id="tsid_3141963"><tbody>
+        <tr><td valign="top"><bold>Command</bold><br type="_moz"/></td><td valign="top"><bold>Shortcut</bold><br type="_moz"/></td></tr>
+        <tr><td valign="top">Toggle text/math<br type="_moz"/></td><td valign="top">Ctrl+m or Ctrl+t<br type="_moz"/></td></tr>
+        <tr><td valign="top">Enter fraction<br type="_moz"/></td><td valign="top">Ctrl+/ or <object width="22" height="20" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0 0 0 0 0 0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 20px; width: 22px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141906" data="graphics/btnFraction.jpg"/><br type="_moz"/></td></tr>
+        <tr><td valign="top">Insert radical<br type="_moz"/></td><td valign="top">Ctrl+r or <object width="23" height="21" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0 0 0 0 0 0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 21px; width: 23px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141907" data="graphics/btnRadical.jpg"/><br type="_moz"/></td></tr>
+        <tr><td valign="top">Insert superscript<br type="_moz"/></td><td valign="top">Ctrl+h, Ctrl+ or <object width="26" height="25" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0 0 0 0 0 0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 25px; width: 26px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141908" data="graphics/btnSuperscript.jpg"/><br type="_moz"/></td></tr>
+        <tr><td valign="top">Insert subscript<br type="_moz"/></td><td valign="top" msiSelectionManagerID="51">Ctrl+l, Ctrl+  <math xmlns="http://www.w3.org/1998/Math/MathML"><mi/></math>or <object width="29" height="21" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0 0 0 0 0 0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 21px; width: 29px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141909" data="graphics/btnSubscript.jpg"/><br type="_moz"/></td></tr>
+        <tr><td valign="top">Insert display<br type="_moz"/></td><td valign="top">Ctrl+d or <object width="27" height="24" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0 0 0 0 0 0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 24px; width: 27px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141910" data="graphics/btnDisplay.jpg"/><br type="_moz"/></td></tr></tbody></table><br type="_moz"/>
+    </bodyText>
+    <msibr/>
 </section>
+
 <section id="tsid_3141642">
-<sectiontitle><shortTitle>Document Production</shortTitle>Document Production
-Shortcuts</sectiontitle> 
-<bodyText>
-
-</bodyText>
-
+<sectiontitle><shortTitle>Document Production</shortTitle>Document Production Shortcuts</sectiontitle> 
+    <bodyText msiSelectionManagerID="18"><table cellspacing="2" cellpadding="2" border="1" style="width: 432px; height: 217px;" id="tsid_3141964"><tbody>
+        <tr><td valign="top"><bold>Command</bold><br type="_moz"/></td><td valign="top"><bold>Shortcut</bold><br type="_moz"/></td></tr>
+        <tr><td valign="top">Print (default method)<br type="_moz"/></td><td valign="top">Ctrl+p or Alt f p or <object alt="" src="graphics/btnPrint.jpg" data="graphics/btnPrint.jpg" req="wrapfig" naturalWidth="24.089997205939344" naturalHeight="18.06749790445451" units="pt" msi_resize="true" sidemargin="21.7" topmargin="10.8" overhang="21.7" style="border: 0px solid rgb(0, 0, 0); margin: 14.3462px 0px; padding: 0px; background-color: rgb(255, 255, 255); text-align: left; float: none; height: 37.858px; width: 50.4774px;" border-color="#000000" background-color="#ffffff" textalignment="left" ltx_width="38" ltx_height="28.5" pos="c"/><br/><object width="0" height="0" border="0" req="graphicx" units="in" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141923" sidemargin="0" topmargin="0" border-width="0" data="graphics/btnPrint.jpg"/></td></tr>
+        <tr><td valign="top">Preview<br type="_moz"/></td><td valign="top"><object width="38" height="27" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 35.8655px; width: 50.4774px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141925" sidemargin="0" topmargin="0" border-width="0" data="graphics/btnPreview.jpg"/><br type="_moz"/></td></tr>
+        <tr><td valign="top">Document Format<br type="_moz"/></td><td valign="top">Alt p d<br type="_moz"/></td></tr>
+        <tr><td valign="top">Insert marker<br type="_moz"/></td><td valign="top">Alt i k <object width="27" height="25" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 33.2088px; width: 35.8655px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141926" sidemargin="0" topmargin="0" border-width="0" data="graphics/btnMarker.jpg"/><br type="_moz"/></td></tr>
+        <tr><td valign="top">Insert cross reference<br type="_moz"/></td><td valign="top">Alt i y r <object width="29" height="24" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 31.8805px; width: 38.5222px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141927" sidemargin="0" topmargin="0" border-width="0" data="graphics/btnXref.jpg"/><br type="_moz"/></td></tr>
+        <tr><td valign="top">Insert citation<br type="_moz"/></td><td valign="top" msiSelectionManagerID="6">Alt i y c <object width="22" height="26" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 34.5372px; width: 29.2237px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141928" sidemargin="0" topmargin="0" border-width="0" data="graphics/btnCitation.jpg"/><br type="_moz"/></td></tr>
+        <tr><td valign="top">Insert index entry<br type="_moz"/></td><td valign="top">Alt i y i <object width="28" height="25" border="0" xmlns="http://www.w3.org/1999/xhtml" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 33.2088px; width: 37.1939px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141930" sidemargin="0" topmargin="0" border-width="0" data="graphics/btnIndex.jpg"/><br type="_moz"/></td></tr>
+        <tr><td valign="top" msiSelectionManagerID="48">Insert <texlogo xmlns="http://www.w3.org/1999/xhtml" name="tex">T<sub>E</sub>X</texlogo> field<br type="_moz"/></td><td valign="top" msiSelectionManagerID="2">Alt i y t <object width="28" height="26" border="0" data="graphics/btnTeX.jpg" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 34.5372px; width: 37.1939px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141931" sidemargin="0" topmargin="0" border-width="0"/><bodyText><object alt="" ltx_width="37" ltx_height="34.4" naturalWidth="21.078747555196927" naturalHeight="19.57312272982572"                                                                                                                                            units="pt" msi_resize="true" sidemargin="21.7" topmargin="10.8" overhang="21.7" style="border: 0px solid rgb(0, 0, 0); margin: 14.3462px 0px; padding: 0px; background-color: rgb(255, 255, 255); text-align: left; float: none; height: 45.6953px; width: 49.149px;" border-color="#000000" background-color="#ffffff" textalignment="left" pos="c"/></bodyText></td></tr>
+        <tr><td valign="top">Insert hyperlink<br type="_moz"/></td><td valign="top">Alt i p <object width="28" height="27" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 35.8655px; width: 37.1939px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141929" sidemargin="0" topmargin="0" border-width="0" data="graphics/btnHLink.jpg"/><br type="_moz"/></td></tr>
+        </tbody></table><msibr/>
+    </bodyText>
+    <msibr/>
 </section>
 
 </chapter>
