Add shortcuts (that were missing).

--- a/prince/helpfiles/locale/en-us/cd03-05-simpledoc.xhtml
+++ b/prince/helpfiles/locale/en-us/cd03-05-simpledoc.xhtml
@@ -23,5 +23,13 @@
 <sectiontitle>Shortcuts</sectiontitle> 
 <bodyText><indexitem req="varioref"><prisec>keyboard conventions!shortcuts</prisec></indexitem>Here
 is a list of shortcuts for the commands covered in this chapter: </bodyText>
+  <bodyText><table cellspacing="2" cellpadding="2" border="1" style="width: 313px; height: 327px;" id="tsid_3141959"><tbody>
+    <tr><td valign="top"><bold>Command</bold><br type="_moz"/></td><td valign="top"><bold>Shortcut</bold><br type="_moz"/></td></tr>
+    <tr><td valign="top">Save<br type="_moz"/></td><td valign="top">Ctrl+s or Alt f s or <object width="29" height="26" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 34.5372px; width: 38.5222px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141880" sidemargin="0" topmargin="0" border-width="0" data="graphicscd/btnSave.jpg"/><br type="_moz"/></td></tr>
+    <tr><td valign="top">New Document<br type="_moz"/></td><td valign="top">Ctrl+n or Alt f n or <object width="23" height="24" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 31.8805px; width: 30.5521px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141881" sidemargin="0" topmargin="0" border-width="0" data="graphicscd/btnNew.jpg"/><br type="_moz"/></td></tr>
+    <tr><td valign="top">Open Document <br type="_moz"/></td><td valign="top">Ctrl+o or Alt f o or <object width="27" height="25" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 33.2088px; width: 35.8655px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141882" sidemargin="0" topmargin="0" border-width="0" data="graphicscd/btnOpen.jpg"/><br type="_moz"/></td></tr><tr><td valign="top">Quit program<br type="_moz"/></td><td valign="top">Ctrl+q or Alt f q<br type="_moz"/></td></tr><tr><td valign="top">Close Document<br type="_moz"/></td><td valign="top">Alt f c <br type="_moz"/></td></tr><tr><td valign="top">Save As<br type="_moz"/></td><td valign="top">Alt f a<br type="_moz"/></td></tr><tr><td valign="top">Revert<br type="_moz"/></td><td valign="top">Alt f v <br type="_moz"/></td></tr>
+    </tbody></table><br type="_moz"/>
+          </bodyText>
+        <msibr/>
 </section></body> 
 </html>
