--- a/prince/helpfiles/locale/en-us/cd04-09-editingdocs.xhtml
+++ b/prince/helpfiles/locale/en-us/cd04-09-editingdocs.xhtml
@@ -24,5 +24,13 @@
 <bodyText><indexitem req="varioref"><prisec>keyboard conventions!shortcuts</prisec></indexitem>The
 following table shows shortcuts relevant to topics covered in this chapter.
 </bodyText>
+   <bodyText>
+      <table cellspacing="2" cellpadding="2" border="1" style="width: 253px; height: 271px;" id="tsid_3141961" req="tabulary"><tbody>
+        <tr><td valign="top"><bold>Command</bold><br type="_moz"/></td><td valign="top"><bold>Shortcut</bold><br type="_moz"/></td></tr>
+        <tr><td valign="top">Undo<br type="_moz"/></td><td valign="top">Ctrl+z or Alt e u<br type="_moz"/></td></tr>
+        <tr><td valign="top">Redo<br type="_moz"/></td><td valign="top">Ctrl+y or Alt e r<br type="_moz"/></td></tr>
+        <tr><td valign="top">Select All<br type="_moz"/></td><td valign="top">Ctrl+a or Alt e a<br type="_moz"/></td></tr><tr><td valign="top">Cut<br type="_moz"/></td><td valign="top">Ctrl+x or Alt e t<br type="_moz"/></td></tr><tr><td valign="top">Copy<br type="_moz"/></td><td valign="top">Ctrl+c or Alt e c<br type="_moz"/></td></tr><tr><td valign="top">Paste<br type="_moz"/></td><td valign="top">Ctrl+v or Alt e p<br type="_moz"/></td></tr><tr><td valign="top">Bold text<br type="_moz"/></td><td valign="top" msiSelectionManagerID="11"><object width="25" height="25" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 33.2088px; width: 33.2088px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141897" sidemargin="0" topmargin="0" border-width="0" data="graphicscd/btnBold.jpg"/><br type="_moz"/></td></tr><tr><td valign="top">Italic text<br type="_moz"/></td><td valign="top" msiSelectionManagerID="12"><object width="28" height="26" border="0" req="graphicx" units="pt" msi_resize="true" margin="0 0 0 0 0 0" padding="0" crop="0 0 0 0 0 0" pos="inline" style="border-style: solid; border-color: black; display: inline; height: 34.5372px; width: 37.1939px;" border-color=" black" overhang="50" placeLocation="h" placement="" id="tsid_3141898" sidemargin="0" topmargin="0" border-width="0" data="graphicscd/btnItalic.jpg"/><br type="_moz"/></td></tr></tbody></table><br type="_moz"/>
+    </bodyText>
+    <msibr/>
 </section></body> 
 </html>
