Change type to get graphics to appear in help.

--- a/prince/helpfiles/locale/en-us/dm06-02-plotting.xhtml
+++ b/prince/helpfiles/locale/en-us/dm06-02-plotting.xhtml
@@ -82,8 +82,10 @@
    below other toolbars at the top of the screen.<br xmlns="http://www.w3.org/1999/xhtml" />
 </html:bodyText>
 <html:bodyText>
-<html:msiframe pos="inline" height=".297" width="1.516" units="in" placeLocation="" topmargin=".059" sidemargin=".118" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: 1.516in; height: .297in;" imageWidth="1.516in" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-02-plotting__1.png" />
+<html:msiframe pos="inline" height=".297" width="1.516" units="in" placeLocation="" topmargin=".059" 
+sidemargin=".118" style="margin: 5.67px auto;" msi_resize="true">
+<html:object style="width: 1.516in; height: .297in;" imageWidth="1.516in" 
+msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-02-plotting__1.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -108,7 +110,7 @@
    Click the Reset Viewpoint
    tool
 <html:msiframe pos="inline" height=".342" width=".394" units="in" inlineOffset=".093" placeLocation="" topmargin=".059" sidemargin=".118" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: .394in; height: .342in;" imageWidth=".394in" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-02-plotting__2.png" />
+<html:object style="width: .394in; height: .342in;" imageWidth=".394in" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-02-plotting__2.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -125,7 +127,7 @@ to
    The Zooming
    tool
 <html:msiframe pos="inline" height=".353" width=".374" units="in" inlineOffset=".114" placeLocation="" topmargin=".059" sidemargin=".118" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: .374in; height: .353in;" imageWidth=".374in" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-02-plotting__3.png" />
+<html:object style="width: .374in; height: .353in;" imageWidth=".374in" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-02-plotting__3.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -175,7 +177,7 @@ shows
    with the
    Moving Tool
 <html:msiframe pos="inline" height=".342" width=".384" units="in" inlineOffset=".136" placeLocation="" topmargin=".059" sidemargin=".118" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: .384in; height: .342in;" imageWidth=".384in" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-02-plotting__4.png" />
+<html:object style="width: .384in; height: .342in;" imageWidth=".384in" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-02-plotting__4.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
