Change type to get graphics to appear in help.

--- a/prince/helpfiles/locale/en-us/dm06-01-plotting.xhtml
+++ b/prince/helpfiles/locale/en-us/dm06-01-plotting.xhtml
@@ -1681,7 +1681,7 @@ plots of inverses</html:sectiontitle></html:subsection>
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-01-plotting__15.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-01-plotting__15.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -1699,7 +1699,7 @@ plots of inverses</html:sectiontitle></html:subsection>
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-01-plotting__16.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-01-plotting__16.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -1823,7 +1823,7 @@ plots of inverses</html:sectiontitle></html:subsection>
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-01-plotting__17.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-01-plotting__17.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -1854,7 +1854,7 @@ plots of inverses</html:sectiontitle></html:subsection>
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-01-plotting__18.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-01-plotting__18.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -1885,7 +1885,7 @@ plots of inverses</html:sectiontitle></html:subsection>
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-01-plotting__19.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-01-plotting__19.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -2309,7 +2309,7 @@ Inequality Plots</html:sectiontitle></html:section>
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-01-plotting__21.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-01-plotting__21.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -2376,7 +2376,7 @@ Inequality Plots</html:sectiontitle></html:section>
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-01-plotting__22.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-01-plotting__22.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
