--- a/prince/helpfiles/locale/en-us/dm06-03-plotting.xhtml
+++ b/prince/helpfiles/locale/en-us/dm06-03-plotting.xhtml
@@ -248,7 +248,7 @@ User Settings</h2>
 </a>Opening the Graph User Settings Dialog Box</html:sectiontitle></html:section>
 <html:bodyText>
 <html:msiframe pos="inline" height="2.392" width="3.1" units="in" placeLocation="" topmargin=".059" sidemargin=".118" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: 3.1in; height: 2.392in;" imageWidth="3.1in" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-03-plotting__1.png" />
+<html:object style="width: 3.1in; height: 2.392in;" imageWidth="3.1in" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-03-plotting__1.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
