--- a/prince/helpfiles/locale/en-us/dm06-04-plotting.xhtml
+++ b/prince/helpfiles/locale/en-us/dm06-04-plotting.xhtml
@@ -449,7 +449,7 @@
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-04-plotting__1.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-04-plotting__1.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -486,7 +486,7 @@
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-04-plotting__2.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-04-plotting__2.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -892,7 +892,7 @@
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-04-plotting__5.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-04-plotting__5.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -910,7 +910,7 @@
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-04-plotting__6.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-04-plotting__6.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -1164,7 +1164,7 @@
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-04-plotting__8.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-04-plotting__8.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -1182,7 +1182,7 @@
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-04-plotting__9.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-04-plotting__9.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -1300,7 +1300,7 @@
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-04-plotting__10.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-04-plotting__10.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -1318,7 +1318,7 @@
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-04-plotting__11.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-04-plotting__11.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -3521,7 +3521,7 @@ Polar Plots</html:sectiontitle></html:section>
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-04-plotting__23.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-04-plotting__23.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
@@ -3552,7 +3552,7 @@ Polar Plots</html:sectiontitle></html:section>
 <tr>
 <td>
 <html:msiframe pos="inline" height="NaN" width="NaN" units="px" placeLocation="" topmargin="5.669" sidemargin="11.339" style="margin: 5.67px auto;" msi_resize="true">
-<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="application/x-mupad-graphics+xml" data="graphics/dm06-04-plotting__24.png" />
+<html:object style="width: NaNpx; height: NaNpx;" imageHeight="NaNpx" msigraph="true" alt="Generated Plot" type="image/png" data="graphics/dm06-04-plotting__24.png" />
 <html:imagecaption>
 </html:imagecaption>
 </html:msiframe>
