Fix the last edit.  If you delete <hspace>, be sure to delete the matching </hspace>.

--- a/prince/helpfiles/locale/en-us/cd05-00-workwithmath.xhtml
+++ b/prince/helpfiles/locale/en-us/cd05-00-workwithmath.xhtml
@@ -54,5 +54,5 @@ editing procedures are available for certain mathematical objects. </bodyText>
 chapter gives instructions for entering and editing mathematical information.
 It explains how to enter mathematical symbols and characters and how to
 create automatically formatted objects, such as fractions, radicals, and
-operators.  <br/></hspace></bodyText></chapter></body> 
+operators.  <br/></bodyText></chapter></body> 
 </html>
