Fix last edit (an over-deletion).

--- a/prince/helpfiles/locale/en-us/cd06-04-finaltouch.xhtml
+++ b/prince/helpfiles/locale/en-us/cd06-04-finaltouch.xhtml
@@ -54,7 +54,7 @@ A marker elsewhere in the current document. </bodyText></bulletListItem>
 <bulletListItem><bodyText>
 A different document located on your computer or network, or a marker in
 that document. </bodyText></bulletListItem>
-<bulletListItem>
+<bulletListItem><bodyText>
 Any URL location or file on the Web. 
 
 </bodyText>
