Match section level with toc.

--- a/prince/helpfiles/locale/en-us/dm06-03-plotting.xhtml
+++ b/prince/helpfiles/locale/en-us/dm06-03-plotting.xhtml
@@ -486,9 +486,9 @@ User Settings</h2>
 <html:bodyText>
    [ <html:a href="#top"> Return to beginning of section</html:a> ]
 </html:bodyText>
-<html:section><html:sectiontitle>
+<html:subsection><html:sectiontitle>
 <a id="line thickness" xmlns="http://www.w3.org/1999/xhtml">
-</a>Line thickness</html:sectiontitle></html:section>
+</a>Line thickness</html:sectiontitle></html:subsection>
 <html:bodyText>
    The line thickness can be Thin, Medium, or Thick.<br xmlns="http://www.w3.org/1999/xhtml" />
 </html:bodyText>
