Adjust heading level to match printed manual

--- a/prince/helpfiles/locale/en-us/dm06-06-plotting.xhtml
+++ b/prince/helpfiles/locale/en-us/dm06-06-plotting.xhtml
@@ -4393,9 +4393,9 @@ in space viewed as curtains</html:sectiontitle></html:subsection>
 <html:bodyText>
    [ <html:a href="#top"> Return to beginning of section</html:a> ]
 </html:bodyText>
-<html:section><html:sectiontitle>
+<html:subsection><html:sectiontitle>
 <a id="spherical coordinates and defined functions" xmlns="http://www.w3.org/1999/xhtml">
-</a>Spherical coordinates and defined functions</html:sectiontitle></html:section>
+</a>Spherical coordinates and defined functions</html:sectiontitle></html:subsection>
 <html:bodyText>
    You can create a plot of a function defined in spherical coordinates
    <mml:math display="inline" xmlns="http://www.w3.org/1999/xhtml">
@@ -4801,9 +4801,9 @@ in space viewed as curtains</html:sectiontitle></html:subsection>
 <html:bodyText>
    [ <html:a href="#top"> Return to beginning of section</html:a> ]
 </html:bodyText>
-<html:section><html:sectiontitle>
+<html:subsection><html:sectiontitle>
 <a id="parameterized surfaces in spherical coordinates" xmlns="http://www.w3.org/1999/xhtml">
-</a>Parameterized surfaces in spherical coordinates</html:sectiontitle></html:section>
+</a>Parameterized surfaces in spherical coordinates</html:sectiontitle></html:subsection>
 <html:bodyText>
 <html:italics>Parameterized surfaces</html:italics> in spherical coordinates are
    given by equations of the form
