Modifications to about dialog to put copyright date in the dialog text instead of the graphic, change the graphic for SWP, and change the credits tab so that former contributors are in gray text.

--- a/prince/base/content/credits.html
+++ b/prince/base/content/credits.html
@@ -9,6 +9,9 @@
 		li {
 			list-style-image: none;
 		}
+		.former {
+			color: 909090;
+		}
 		html {
 			width: 4in;
 		}
@@ -30,7 +33,7 @@
 		</ul>
   <h3>Graphics designers</h3>
   	<ul>
-  	<li> Patti Kearney</li>
+  	<li class="former"> Patti Kearney</li>
   	</ul>
   <h3>Testers and creators of shell documents</h3>
   	<ul>
