Wrote the text for the credits tab and the licenses tab for the About dialog. Changed the location of the written notes for the sidebar so that 'beta' is no longer in the URL. Wrote new notes for the release. Took out the ability to put plots inline or in a position enabled by wrapfig. Did the same in the plot preferences. Fixed various glitches with the licensing dialogs for non-SWP products.

--- a/prince/base/content/credits.html
+++ b/prince/base/content/credits.html
@@ -1,10 +1,11 @@
 <html>
-<head>   
+<head>
 	<style>
 		body {
 			font-family: sans-serif;
 			width: 4in;
-			overflow-y: hidden;
+			overflow: scroll;
+			overflow-x: hidden;
 		}
 		li {
 			list-style-image: none;
@@ -12,12 +13,15 @@
 		.former {
 			color: 909090;
 		}
+		.footer {
+			font-size: small;
+		}
 		html {
 			width: 4in;
 		}
-	</style>                
+	</style>
 	<title>Credits</title>
-</head> 
+</head>
 <body>
   <h2>Credits: </h2>
   <h3>Software developers</h3>
@@ -42,11 +46,12 @@
   	<li>George Pearson</li>
   	</ul>
 	<h3>Sales and support and operations</h3>
-	  <ul>
+	<ul>
 		<li>Nadine Green</li>
 		<li>Lynda MacKichan</li>
 		<li>Mike Robbins</li>
 		<li>Liz Thayer</li>
-		</ul>
+	</ul>
+	<p class="footer">Names in dark type are for current employees of MacKichan Software.</p>
 </body>
 </html>
