Fix a typo, it's Ctrl+k to activate the symbol keyboard.

--- a/prince/helpfiles/locale/en-us/cd05-02-workwithmath.xhtml
+++ b/prince/helpfiles/locale/en-us/cd05-02-workwithmath.xhtml
@@ -75,7 +75,7 @@ Ctrl+spacebar and then press Enter. </bodyText></subparagraph>
 <sectiontitle>To enter symbols and characters from an alternate keyboard</sectiontitle>
 
 <numberedlist>  
-<numberedListItem><bodyText>Press Ctrl+7 to change to the
+<numberedListItem><bodyText>Press Ctrl+k to change to the
 Symbol keyboard or Ctrl+g to change to the Greek keyboard. </bodyText></numberedListItem>
 <numberedListItem><bodyText>Press
 the key for the symbol you want. 
